--- a/index.html
+++ b/index.html
@@ -139,11 +139,11 @@
 
       const loader = new THREE.TextureLoader();
       const photoFiles = [
-        "./image5.png",
-        "./image4.png",
-        "./image3.png",
-        "./image2.png",
-        "./image1.png",
+        "./image105.jpg",
+        "./image104.jpg",
+        "./image103.jpg",
+        "./image102.png",
+        "./image101.jpg",
       ];
       const photoTextures = [];
       photoFiles.forEach((f, i) => (photoTextures[i] = loader.load(f)));
