--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@
         "./image104.jpg",
         "./image103.jpg",
         "./image102.png",
-        "./image101.jpg",
+        "./abcd.jpg",
       ];
       const photoTextures = [];
       photoFiles.forEach((f, i) => (photoTextures[i] = loader.load(f)));
